--- a/index.html
+++ b/index.html
@@ -8,17 +8,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section> 
+   <section class="top-banner"> 
     <div class="half-width">
         <h1>Welcome To</h1>
-        <h1><span class="name-highlight">Mohammad Sohel Uddin</span> Website</h1>
+        <h1><span class="orange-highlight">Mohammad Sohel Uddin</span> Website</h1>
         <h3>World-Class Professional Web Developer</h3>
         <p>Hello Dear! Thank you so much for clicking this website. I'm a world class web developer. Really I'm am waiting for you. Because I want to improve yourself. You can get here a lots of sorce of element. I'll try to my best to give you my effort. Don't worry. I'm always with you. So let's get started now.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-sohel-uddin-672385195/">HIRE ME</a>
     </div>
     <div class="half-width">
         <img src="C:\Web Development\Project\web-portfolio\images\profile.png" alt="">
-    </div>
-    
+    </div> 
 </section>
+
+<section class="dream-area">
+    <div class="half-width">
+        <img src="C:\Web Development\Project\web-portfolio\images\image 10.png" alt="">
+    </div>
+    <div class="half-width">
+        <h2>Big Dream</h2>
+        <h3>Become World's No. 1 Developer</h3>
+        <p>Recently I've learned HTML & CSS. So, now I can build a portfolio website. Also I can teach about  making a website who want to learn this. I think web development is a very good Professional area who want to make themself as a professional web developer.</p>
+        <a class="link-button" href="https://www.linkedin.com/in/mohammad-sohel-uddin-672385195/">DOWNLOAD RESUME</a>
+    </div>
+</section>
+<section class="experience-area">
+    <h2>Experiences</h2>
+    <div id="full-stack" class="half-width single-experience">
+        <h2>Full Stack Web Developer</h2>
+        <h3 class="orange-highlight">2021 - Present | Pro level Web Developer</h3>
+        <p>I am the master of HTML, CSS & Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vuc JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+    </div>
+    <div id="baby-web" class="half-width single-experience">
+        <h2>Baby WEb Developer</h2>
+        <h3 class="orange-highlight">2020 - 2021 | Programming Hero Learner</h3>
+        <p>The didn't offer me a job. But I made myself as remote web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+    </div>
+</section>
+<footer>
+    <p>&copy MD Sohel 2021, all rights reserved.</p>
+</footer>
 </body>
 </html>
