--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mohammad-sohel-uddin-672385195/">HIRE ME</a>
     </div>
     <div class="half-width">
-        <img src="C:\Web Development\Project\web-portfolio\images\profile.png" alt="">
+        <img src="images\profile.png" alt="">
     </div> 
 </section>
 
 <section class="dream-area">
     <div class="half-width">
-        <img src="C:\Web Development\Project\web-portfolio\images\image 10.png" alt="">
+        <img src="images\image 10.png" alt="">
     </div>
     <div class="half-width">
         <h2>Big Dream</h2>
